change page title

--- a/simpleFrontend/index.html
+++ b/simpleFrontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Scale Determination</title>
+    <title>MoCap</title>
     <!-- Include jQuery and Socket.IO -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/socket.io.js"></script>
